codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_wait_status_renders_command_in_single_details_row.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: normalize_snapshot_paths(rendered)
---
✦ Waiting for background terminal       Esc stop
  ├ Terminal · /ps inspect · /stop terminate
  └ cargo test -p codex-core -- --exact…

╭─────────────────────────────────── tab queue ╮
┃ ›                                            │
╰ ctrl + t transcript ─────────────────────────╯
  GPT 5.6 Sol · Default · /tmp/project
