codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__usage_command_menu_before_reset_refresh.snap
---
source: tui/src/chatwidget/tests/usage.rs
expression: "render_bottom_popup(&chat, 80)"
---
  Usage
  View account usage or redeem an earned reset.

› 1. Show usage                View recent account token usage.
  2. Redeem usage limit reset  Check reset availability.

  ↑/↓ choose · enter confirm · esc back
